I beutified everything and now it looks great

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 
 <link rel="stylesheet" href="style.css">
 
-<body>
-    <div class="center">
-        <button id = "button" onclick="onButtonPressed()"> Randomize direction! </button>
-        <h1 id = "text"> randomize </h1>
+<body class="smooth">
+    <div class="center smooth">
+        <button class="smooth" id = "button" onclick="onButtonPressed()"> 
+            Randomize <br>
+            direction 
+        </button>
+        
+        <h1 class="smooth" id = "text"> ← </h1>
+        
         <script src="script.js"> </script>
     </div>
 </body>
